tests/parser/bad/lib/lmodule-library-cid-type-cid-eq-bar-with.scillib
library TestLib

(* 'kind' should start with a capital *)

type House =
| kind of String
